fix service overflow in mobile view

--- a/style.css
+++ b/style.css
@@ -949,6 +949,7 @@ li{
         align-items: center;
         gap: 0rem;
         margin: 3rem;
+        overflow: visible;
     }
     .card-grid{
         display: flex;
